@@ -44,6 +44,7 @@ struct _DilloPrefs {
    bool_t w3c_plus_heuristics;
    bool_t focus_new_tab;
    double font_factor;
+   int32_t font_min_size;
    bool_t show_back;
    bool_t show_forw;
    bool_t show_home;
